# ComfyUI-Dream-Interpreter

./: README.md  __init__.py  dream_interpretation_workflow.json  extremely_detailed_360_3D_viewer.json  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
web/: visualization.js
web/html/: threeVisualizer.html
web/js/: threeVisualizer.js
